--- a/templates/page/base.html
+++ b/templates/page/base.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% load staticfiles %}
     <title>{% block title %}{% endblock %}</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap' %}">
 </head>
 <body>
     <div class="container-fluid">
@@ -11,8 +12,11 @@
             <div class="col-sm-3">
                 <p><a href="#">CarFinder</a></p>
             </div>
-            <div class="col-sm-5">
-
+            <div class="col-sm-4">
+                <input type="text" placeholder="Nhập thông tin tìm kiếm" >
+            </div>
+            <div class="col-sm-1">
+                <button class="btn-search" type="submit">T</button>
             </div>
             <div class="col-sm-2">
                 <center><img src="#"></center>
@@ -25,6 +29,7 @@
                 <p><a>Đăng xuất</a></p>
             </div>
         </div>
+
         <div class="row">
             <div class="col-sm-3">
 
@@ -46,7 +51,16 @@
             </div>
 
         </div>
-    </div>
-    {% block content %}{% endblock %}
+
+        <div class="row">
+            <div class="col-sm-3">
+
+            </div>
+            <div class="col-sm-9">
+                {% block content %}{% endblock %}
+            </div>
+
+        </div>
+     </div>
 </body>
 </html>
