--- a/templates/page/base.html
+++ b/templates/page/base.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> {% load static %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/css/style_base.css">
+    <title>{% block title %} {% endblock title %}</title>
 </head>
+
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-3">
-                <p><a href="#">CarFinder</a></p>
+    <div class="contener-fluid">
+        <div class="row head">
+            <div class="col-sm-4 logo">
+                <p><strong><a href="#">CarFinder</a></strong></p>
             </div>
-            <div class="col-sm-4">
-                <input type="text" placeholder="Nhập thông tin tìm kiếm" >
+            <div class="col-sm-5 search">
+                <input class="input" placeholder="Nhập nội dung tìm kiếm">
+                <button class="btn_search">Search</button>
             </div>
-            <div class="col-sm-1">
-                <button class="btn-search" type="submit">T</button>
+            <div class="col-sm-1 user">
+                <img src="https://www.moviesjacket.com/image/cache/data/guardians-of-the-galaxy-vol-2-baby-groot-jacket/baby-groot-maroon-cotton-jacket-850x1300.jpg" alt="img_user">
+                <p><a href="">username</a></p>
             </div>
-            <div class="col-sm-2">
-                <center><img src="#"></center>
-                <p>UserName</p>
-            </div>
-            <div class="col-sm-1">
-                <p><a>Đăng nhập</a></p>
-            </div>
-            <div class="col-sm-1">
-                <p><a>Đăng xuất</a></p>
+            <div class="col-sm-2 account">
+                <p><a href="">Login</a></p>
+                <P class="center">|</P>
+                <p><a href="">Logout</a></p>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-sm-3">
-
-            </div>
-            <div class="col-sm-1">
-
-            </div>
+        <div class="row head-content">
             <div class="col-sm-2">
-
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-10 menu head-menu">
+                <nav class="navbar navbar-expand-sm  justify-content-end menu-top">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">BÀI VIẾT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">DỊCH VỤ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">NHÀ XE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">QUY TẮC</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">LIÊN HỆ</a>
+                        </li>
 
+                    </ul>
+                </nav>
             </div>
-            <div class="col-sm-2">
-
+        </div>
+        <div class="row content">
+            <div class="col-sm-2 left-content">
+                {% block left_content %} {% endblock left_content %}
             </div>
-            <div class="col-sm-2">
-
+            <div class="col-sm-10 right-content">
+                {% block content %} {% endblock content %}
             </div>
+        </div>
+        <div class="footer">
 
         </div>
+    </div>
+    </div>
 
-        <div class="row">
-            <div class="col-sm-3">
-
-            </div>
-            <div class="col-sm-9">
-                {% block content %}{% endblock %}
-            </div>
-
-        </div>
-     </div>
 </body>
+
 </html>
